--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -64,8 +64,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=21
-javac.target=21
+javac.source=17
+javac.target=17
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -95,7 +95,7 @@ main.class=org.pmsys.main.Application
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_17
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
