--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=pmsys3.0
+application.title=project-management-system
 application.vendor=Mel Adry
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,10 +29,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/pmsys3.0.jar
+dist.jar=${dist.dir}/project-management-system.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/pmsys3.0
+dist.jlink.output=${dist.jlink.dir}/project-management-system
 endorsed.classpath=
 excludes=
 file.reference.flatlaf-3.4.jar=lib/flatlaf-3.4.jar
@@ -90,7 +90,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=pmsys3.0
+jlink.launcher.name=project-management-system
 main.class=org.pmsys.main.Application
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
